# Orgnizer

./: .replit  Dockerfile  JGRBrokerImportacao.spec  add_edit.py.txt  animation_styles.css  app.py  build_executable.py  client_utils.py  column_toggle.js  create_exe.py  custom_html_styles.py  data.json  data.py  data_backup_20250511_131529.json  data_backup_20250511_193222.json  data_backup_20250513_215222.json  data_backup_20250520_181300.json  data_pre_restauracao_20250513_215655.json  docker-compose.yml  fix_hostinger_imports.py  fixed_script.js  gerar_120_processos.py  gerar_30_processos.py  gerar_dados_teste.py  guia_deploy_hostinger.md  guia_deploy_streamlit_cloud.md  guia_facil_deploy_streamlit.md  guia_facil_instalacao.md  guia_hospedagem_simples.md  hostinger_app.py  html_export_pagination.py  html_export_styles.py  html_generator.py  html_paginated.py  html_paginated_original.py  html_post_processor.py  html_table_styles.py  iniciar_app_local.bat  iniciar_jgr.bat  inline_mobile_styles.py  (+32 more)
assets/: custom.css  stock_photos.py
components/: add_edit.py  archived.py  auth.py  client_view.py  event_log.py  home.py  settings.py  share.py  view_details.py
components/backup/: add_edit.py.bak
