[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "django>=5.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyinstaller>=6.13.0",
    "streamlit>=1.45.0",
    "twilio>=9.6.0",
    "xlsxwriter>=3.2.3",
]
